--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
-<! DOCTYPE html>
-<html lang = "en">
-<cabeza>
-     <meta charset = "UTF-8">
-     <title> Cursos de Alura </title>
-</head>
-<cuerpo>
-     <ul>
-         <li> Vagabundo </li>
-         <li> Docker </li>
-         <li> Ansible </li>
-         <li> Integración Continua </li>
-     </ul>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Ahorcado</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div style="text-align:center; margin: 50px 0px;">
+      <h1 class="titulo">Ahorcado</h1>
+      <button class="btn" id="iniciar-juego">INICIAR JUEGO</button>
+    </div>
+    <div style="text-align:center">
+      <input class="text-input" type="text" id="input-nueva-palabra" placeholder="Escriba una nueva palabra">
+      <button class="btn" id="nueva-palabra">AGREGAR PALABRA</button> 
+    </div>
+    <div style="text-align:center;">
+      <canvas id="ahorcado" height="800px" width="1200px"></canvas>
+    </div>
+    <script type="text/javascript" src="js/ahorcado.js"></script>
+    <script type="text/javascript" src="js/juego.js"></script>
+  </body>
 </html>
