Fondo, se valida fin de juego

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Ahorcado</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body class="fondo-pagina">
     <div style="text-align:center; margin: 50px 0px;">
       <h1 class="titulo">Ahorcado</h1>
       <button class="btn" id="iniciar-juego">INICIAR JUEGO</button>
@@ -22,4 +22,8 @@
     <script type="text/javascript" src="js/ahorcado.js"></script>
     <script type="text/javascript" src="js/juego.js"></script>
   </body>
+  <footer id="rodapie">
+    <p> 
+    <em id="PiedePagina">Desarrollado por</em> Juan Sarmiento</p>
+  </footer>
 </html>
